[package]
name = "playground-async-book"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/playground-async-book"
documentation = "https://docs.rs/playground-async-book"
description = "Trying out the async book's examples."
keywords = []
categories = []
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
edition = "2018"
readme = "README.md"

[dependencies]
failure = "0.1.3"
exitfailure = "0.5.1"
human-panic = "1.0.1"
structopt = "0.2.12"
log = "0.4.6"
clap_flags = "0.3.0"
futures-preview = "0.3.0-alpha.9"

[dev-dependencies]

[build-dependencies]
mkdirp = "0.1.0"
structopt = "0.2.12"
clap_flags = "0.3.0"
failure = "0.1.3"
